fix: layout problem of homepage and editpage after add google chart

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@ a{
   text-decoration: none;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 /*====================
 Open Street Map
 ====================*/
